--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -10,6 +10,10 @@
     <meta name="theme-color" content="#ff6622">
 
     <title>{{ .Title }}</title>
+    
+    <link rel="preload" href="/fonts/IBMPlexSans-Regular-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="/fonts/IBMPlexSans-Bold-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="/fonts/IBMPlexSans-Italic-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 
     <!-- Google / Search Engine Tags -->
     <meta name="description" content="Homepage: UI Performance and Resilience blog">
@@ -36,7 +40,7 @@
     {{ end }}
 
     <!-- Stylesheets -->
-    
+
     {{ $sass := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify }}
     <link rel="stylesheet" href="{{ $sass.Permalink }}?v={{now.Unix}}">
     
