--- a/themes/metrumy/layouts/partials/headCustom.html
+++ b/themes/metrumy/layouts/partials/headCustom.html
@@ -10,6 +10,10 @@
     <meta name="theme-color" content="#ff6622">
 
     <title>{{ .Title }}</title>
+    
+    <link rel="preload" href="/fonts/IBMPlexSans-Regular-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="/fonts/IBMPlexSans-Bold-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="/fonts/IBMPlexSans-Italic-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 
     <!-- Google / Search Engine Tags -->
     <meta name="description" content="{{ .Summary }}">
@@ -21,7 +25,6 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ .Title }}">
     <meta property="og:description" content="{{ .Summary }}">
-    <!-- <meta property="og:image" content="http://example.com/image.jpg" /> -->
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary">
@@ -33,13 +36,13 @@
 
     <link rel="canonical" href="{{ .Permalink }}">
     {{ if .RSSLink }}
-    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
+        <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />
+    {{ end }}
 
     <!-- Stylesheets -->
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-    
-    {{ $sass := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
-    <link rel="stylesheet" href="{{ $sass.Permalink }}">
+
+    {{ $sass := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify }}
+    <link rel="stylesheet" href="{{ $sass.Permalink }}?v={{now.Unix}}">
     
     <link rel="icon" type="image/png" href="/icon512.png?v=3" sizes="512v512">
     <link rel="apple-touch-icon" href="/icon512.png?v=3" sizes="512v512">
