--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -1,5 +1,7 @@
 {{ partial "head.html" . }}
 
 {{ partial "blogFront.html" . }}
-
+<div id="app">
+  {{ "{{ message }}" }}
+</div>
 {{ partial "footer.html" . }}
