--- a/themes/metrumy/layouts/partials/footer.html
+++ b/themes/metrumy/layouts/partials/footer.html
@@ -38,21 +38,8 @@
 
 </footer>
 
-<!-- comment unnecesary:-->
-<!--
-<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
-<script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-
-<script src="/react-base/react.16.12.0.production.min.js"></script>
-<script src="/react-base/react-dom.16.12.0.production.min.js"></script>
-
-<script src="/react-base/react.16.12.0.production.bundle.min.js"></script>
--->
-
-{{ $js := resources.Get "js/main.v2.js" }}
+{{ $js := resources.Get "js/main-bundle.v3.js" }}
 <script src="{{ $js.Permalink }}?v={{now.Unix}}"></script>
 
 
