add react dependencies and start new react project

--- a/themes/metrumy/layouts/partials/footerReact.html
+++ b/themes/metrumy/layouts/partials/footerReact.html
@@ -28,17 +28,26 @@
         <a href="#top">
             <button>
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
-                    <path fill="none" d="M0 0h24v24H0V0z"/>
-                    <path fill="#cc5500" d="M8 11h3v10h2V11h3l-4-4-4 4zM4 3v2h16V3H4z"/>
+                    <path fill="none" d="M0 0h24v24H0V0z" />
+                    <path fill="#cc5500" d="M8 11h3v10h2V11h3l-4-4-4 4zM4 3v2h16V3H4z" />
                 </svg>
                 top &nbsp;
             </button>
         </a>
     </div>
 
+    <div id="jstest">
+        {{ "{{ message }}" }}
+    </div>
+
 </footer>
 
 </div>
+
+<!-- Load React. -->
+<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
 {{ $js := resources.Get "js/main-bundle.v3.js" }}
 <script src="{{ $js.Permalink }}?v={{now.Unix}}"></script>
