--- a/themes/metrumy/assets/sass/_colors-global.scss
+++ b/themes/metrumy/assets/sass/_colors-global.scss
@@ -11,7 +11,7 @@ $green:               #22aa00;
 $green-dark:          #004010;
 $green-light:         #33dd55;
 $lime:                #fdff80;
-$blue:                #2233dd;
+$blue:                #0d59fd;
 $blue-dark:             darken($blue, 10%);
 $blue-light:          #3355ff;
 $aquamarine:          #77ddff;
