--- a/themes/metrumy/assets/sass/_colors-global.scss
+++ b/themes/metrumy/assets/sass/_colors-global.scss
@@ -13,7 +13,7 @@ $green-light:         #33dd55;
 $lime:                #fdff80;
 $blue:                #0d59fd;
 $blue-dark:             darken($blue, 10%);
-$blue-light:          #3355ff;
+$blue-light:          #7dbaff;
 $aquamarine:          #77ddff;
 $purple:              #5500aa;
 $purple-light:        #9966ee;
