--- a/themes/metrumy/assets/sass/_colors-global.scss
+++ b/themes/metrumy/assets/sass/_colors-global.scss
@@ -31,3 +31,4 @@ $orange-light:        #ff7733;
 $orange-deep:         #dd4422;
 $night:               #222255;
 $sand:                #998877;
+$sand-dark:           #646261;
