--- a/themes/metrumy/assets/sass/_buttons.scss
+++ b/themes/metrumy/assets/sass/_buttons.scss
@@ -4,29 +4,34 @@ button,
   display: inline-block;
   color: $black;
   cursor: pointer;
-  background-color: lighten($sand, 30%);
-  border: solid lighten($sand, 30%);
-  border-width: 0.1em;
-  border-radius: 8px;
-  box-shadow: 0 1px 3px $grey-dark;
+  background-color: lighten($sand, 25%);
+  background: linear-gradient(lighten($sand, 35%), lighten($sand, 25%));
+  border: none;
+  border-radius: 4px;
+  font-family: inherit;
+  line-height: $base-line-height;
   outline: none; 
-  padding: 0.4em 0.9em;
+  padding: 0.6em 1em 0.4em;
   text-align: center;
   margin: 0;
   max-width: 12em;
   transition: all 0.1s ease-out;
 
   &:hover { 
-    border-color: $blue;
+    box-shadow: 0 0 4px $orange;
   }
 
   &:active { 
-    box-shadow: none;
+    background: lighten($sand, 25%);
   }
 }
 
 .button--cta {
   @extend button;
   background-color: $blue-light;
-  border: solid $blue-light;
+  background: linear-gradient(lighten($blue, 15%), $blue);
+  color: white;
+  &:active { 
+    background: $blue;
+  }
 }
