--- a/themes/metrumy/assets/sass/main.scss
+++ b/themes/metrumy/assets/sass/main.scss
@@ -8,8 +8,10 @@
   "navigation-global",
   "grid-global",
   "footer-global",
+  "animations-global",
   "images-global",
   "video-global",
+  "hero",
   "logo",
   "post-list",
   "article",
