--- a/themes/metrumy/layouts/partials/logo.html
+++ b/themes/metrumy/layouts/partials/logo.html
@@ -1,5 +1,5 @@
     
         <div class="logo">
-            <a class="logo--link" href="/">Mad Software Musings</a>
+            <a class="logo--link" href="/">mad software<br>musings</a>
         </div>
     
