--- a/themes/metrumy/assets/sass/_logo.scss
+++ b/themes/metrumy/assets/sass/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
   background-color: transparent;
-  line-height: 1;
+  line-height: 0.75;
   margin: 0;
   padding: 1rem;
   text-align: left;  
@@ -9,7 +9,7 @@
 a.logo--link {
   animation: 0.5s linear colorize;
   color: $orange-deep;
-  font-size: $xs;
+  font-size: 14px;
   font-weight: bold;
   letter-spacing: 1px;
   text-decoration: none;
