--- a/themes/metrumy/layouts/partials/blogFront.html
+++ b/themes/metrumy/layouts/partials/blogFront.html
@@ -42,21 +42,24 @@
 
         <div class="post-list--container">
 
-            <div class="date post-list--date secondary">
-                {{ .Date.Format "Jan 2, 2006" }}
-                {{ if .Params.video }}
-                   <span class="video--marker">video</span>
-                {{ end }}
-            </div>
 
             <h2 class="post-list--post-title">
                 <a href="{{ .Permalink }}">
                     {{ .Title }}
                 </a>
             </h2>
+
             
             {{ if .Params.subtitle }}
                 <h3 class="post-list--post-subtitle">
+                    {{ if .Params.video }}
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        height="21" 
+                        width="21"
+                        viewBox="0 2 24 24" >
+                        <path d="M0 0h24v24H0V0z" fill="none"/>
+                        <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/></svg>
+                    {{ end }}
                     {{ .Params.subtitle }}
                 </h3>
             {{ end }}
