--- a/themes/metrumy/layouts/partials/blogFront.html
+++ b/themes/metrumy/layouts/partials/blogFront.html
@@ -48,17 +48,29 @@
                     {{ .Title }}
                 </a>
             </h2>
+            {{ if not .Params.subtitle }}       
+                {{ if .Params.video }}
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        height="21" 
+                        width="21"
+                        viewBox="0 2 24 24" >
+                        <path fill="none" d="M0 0h24v24H0V0z"/>
+                        <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/>
+                    </svg>
+                {{ end }}
+            {{ end }}
 
             
             {{ if .Params.subtitle }}
                 <h3 class="post-list--post-subtitle">
                     {{ if .Params.video }}
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                        height="21" 
-                        width="21"
-                        viewBox="0 2 24 24" >
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
-                        <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/></svg>
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            height="21" 
+                            width="21"
+                            viewBox="0 2 24 24" >
+                            <path fill="none" d="M0 0h24v24H0V0z"/>
+                            <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/>
+                        </svg>
                     {{ end }}
                     {{ .Params.subtitle }}
                 </h3>
