--- a/themes/metrumy/assets/sass/_logo.scss
+++ b/themes/metrumy/assets/sass/_logo.scss
@@ -10,7 +10,7 @@ a.logo--link {
   animation: 0.5s linear colorize;
   color: $orange-deep;
   font-size: 15px;
-  font-weight: bold;
+  font-weight: normal;
   letter-spacing: 1px;
   text-decoration: none;
   &:hover {
