--- a/themes/metrumy/assets/sass/_post-list.scss
+++ b/themes/metrumy/assets/sass/_post-list.scss
@@ -4,6 +4,10 @@
   @media (min-width: $screen-mid) {
     @include wrapper-mid;
   }
+
+  @media (max-width: $screen-mid) {
+    margin-left: 0;
+  }
 }
 
 .post-list > li {
