--- a/themes/metrumy/layouts/partials/blogFront.html
+++ b/themes/metrumy/layouts/partials/blogFront.html
@@ -53,9 +53,18 @@
                     <svg xmlns="http://www.w3.org/2000/svg"
                         height="21" 
                         width="21"
-                        viewBox="0 2 24 24" >
+                        viewBox="0 2 24 24">
                         <path fill="none" d="M0 0h24v24H0V0z"/>
                         <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/>
+                    </svg>
+                {{ end }}
+                {{ if "code" in .Params.categories }}
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        height="21"
+                        width="21"
+                        viewBox="0 0 24 24">
+                        <path d="M0 0h24v24H0V0z" fill="none"/>
+                        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
                     </svg>
                 {{ end }}
             {{ end }}
@@ -71,6 +80,15 @@
                             <path fill="none" d="M0 0h24v24H0V0z"/>
                             <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/>
                         </svg>
+                    {{ end }}
+                    {{ if in .Params.categories "code" }}
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                        height="21"
+                        width="21"
+                        viewBox="0 2 24 24">
+                        <path fill="none" d="M0 0h24v24H0V0z"/>
+                        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+                    </svg>
                     {{ end }}
                     {{ .Params.subtitle }}
                 </h3>
