--- a/themes/metrumy/layouts/partials/hero.html
+++ b/themes/metrumy/layouts/partials/hero.html
@@ -1,15 +1,20 @@
 <header class="hero">
-  <div class="hero__grid-container">
-    <div>
-      <div class="hero__name"><a href="/">mad software musings</a></div>
-      <h1 class="hero__title"><span class=" ">code += visual design</span></h1>
+  <div class="hero__container">
+    <h1 class="hero__title--huge">GUIs and Stuff</h1>
+    <div class="hero__grid-container">
+      <div>
+        <div class="hero__name"><a href="/">mad software musings</a></div>
+        <h1 class="hero__title"><span class=" ">code += visual design</span></h1>
+      </div>
+      <!--
+      <nav>
+        <ul class="hero__navigation">
+          <li><a href="">how I work</a></li>
+          <li><a href="">work examples</a></li>
+          <li><a href="">contact</a></li>
+        </ul>
+      </nav>
+      -->
     </div>
-    <nav>
-      <ul class="hero__navigation">
-        <li><a href="">how I work</a></li>
-        <li><a href="">work examples</a></li>
-        <li><a href="">contact</a></li>
-      </ul>
-    </nav>
   </div>
 </header>
