--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -14,6 +14,7 @@
     <link rel="preload" href="/fonts/IBMPlexSans-Regular-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
     <link rel="preload" href="/fonts/IBMPlexSans-Bold-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
     <link rel="preload" href="/fonts/IBMPlexSans-Italic-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+    <link rel="preload" href="/fonts/IBMPlexMono-Italic-Latin1.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
 
     <!-- Google / Search Engine Tags -->
     <meta name="description" content="Homepage: UI Performance and Resilience blog">
