--- a/themes/metrumy/assets/sass/_colors-global.scss
+++ b/themes/metrumy/assets/sass/_colors-global.scss
@@ -14,7 +14,8 @@ $lime:                #fdff80;
 $blue:                #0d59fd;
 $blue-dark:             darken($blue, 10%);
 $blue-light:          #7dbaff;
-$aquamarine:          #77ddff;
+$blue-sky:            #d3eeff;
+$aquamarine:          #77d4ff;
 $purple:              #5500aa;
 $purple-light:        #9966ee;
 $grey:                #787878;
