--- a/themes/metrumy/assets/sass/_navigation-global.scss
+++ b/themes/metrumy/assets/sass/_navigation-global.scss
@@ -1,7 +1,7 @@
 a {
   color: $text-color;
   text-decoration: underline;
-  text-decoration-color: $sand;
+  text-decoration-color: $grey;
   transition: 0.1s ease-in;
 
   &:active, &:hover {
