--- a/themes/metrumy/layouts/partials/hero.html
+++ b/themes/metrumy/layouts/partials/hero.html
@@ -1,10 +1,10 @@
 <header class="hero">
   <div class="hero__container">
-    <h1 class="hero__title--huge">GUIs and Stuff</h1>
-    <div class="hero__grid-container">
+    <h1 class="hero__title--huge">Figure Out How to Create<br> Lasting Content<br> that Pays Dividends</h1>
+    <div class="">
       <div>
-        <div class="hero__name"><a href="/">mad software musings</a></div>
-        <h1 class="hero__title"><span class=" ">code += visual design</span></h1>
+        <div class="hero__name"><a href="/"></a></div>
+        <h1 class="hero__title"><span class=" ">code + visual design</span></h1>
       </div>
       <!--
       <nav>
