--- a/themes/metrumy/assets/sass/_hero.scss
+++ b/themes/metrumy/assets/sass/_hero.scss
@@ -1,9 +1,10 @@
 .hero {
-  background-color: $text-color;
-  background: url('/img/nightskybkd.jpeg');
-  font-size: $xs;
+  background-color: $white;
   line-height: 1.2;
-  padding: 7rem 0;
+  padding: 5rem 0 5rem;
+  margin: 0 auto;
+  text-align: center;
+  //max-width: 1200px;
 }
 
 .hero__container {
@@ -14,7 +15,6 @@
   display: grid;
   grid-template-columns: 40% 55%;
   grid-column-gap: 5%;
-  max-width: 500px;
   padding: 0;
   
 }
@@ -35,7 +35,6 @@
 }
 
 .hero__title {
-  color: white;
   font-size: inherit;
   font-weight: normal;
   line-height: 1.2;
@@ -44,14 +43,8 @@
 }
 
 .hero__title--huge {
-  font-size: $hero;
   font-weight: bold;
-  text-align: left;
-  text-transform: uppercase;
-  color: white;
   margin: 0 1rem 1rem;
-  line-height: 1;
-  letter-spacing: -0.1em;
 }
 
 .hero__title--colorized { // <span> element might be required
@@ -76,7 +69,7 @@
 }
 
 .hero__navigation a {
-  color: white;
+  color: $orange;
   text-decoration: underline;
   text-decoration-style: solid;
   text-decoration-color: #777;
