stylistic ui edit

--- a/themes/metrumy/assets/sass/_colors-global.scss
+++ b/themes/metrumy/assets/sass/_colors-global.scss
@@ -32,4 +32,5 @@ $orange-light:        #ff7733;
 $orange-deep:         #dd4422;
 $night:               #222244;
 $sand:                #998877;
+$sand-light:          #eee5e0;
 $sand-dark:           #646261;
