--- a/themes/metrumy/layouts/partials/hero.html
+++ b/themes/metrumy/layouts/partials/hero.html
@@ -1,6 +1,6 @@
 <header class="hero">
   <div class="hero__container">
-    <h1 class="hero__title--huge">Figure Out How to Create<br> Lasting Content<br> that Pays Dividends</h1>
+    <h1 class="hero__title--huge">Figure Out How to Create<br> <span class="hero__title--colorized">Lasting</span> Content<br> that Pays Dividends</h1>
     <div class="">
       <div>
         <div class="hero__name"><a href="/"></a></div>
