--- a/themes/metrumy/assets/sass/_buttons.scss
+++ b/themes/metrumy/assets/sass/_buttons.scss
@@ -5,9 +5,9 @@ button,
   color: $black;
   cursor: pointer;
   background-color: transparent;
-  border: solid $grey-dark;
+  border: solid $black;
   border-width: 2px 2px 4px;
-  border-radius: 4px;
+  border-radius: 4px 4px 6px 4px;
   font-family: inherit;
   line-height: $base-line-height;
   outline: none; 
@@ -17,13 +17,13 @@ button,
   margin: 0;
   max-width: 12em;
 
-
   &:hover { 
     color: $orange;
   }
 
   &:active { 
     border-width: 2px 2px 2px;
+    border-radius: 4px 4px 4px 4px;
     margin: 2px 0 0 ;
   }
 }
