--- a/themes/metrumy/layouts/partials/hero.html
+++ b/themes/metrumy/layouts/partials/hero.html
@@ -1,11 +1,8 @@
 <header class="hero">
   <div class="hero__container">
-    <h1 class="hero__title--huge">Figure Out How to Create<br> <span class="hero__title--colorized">Lasting</span> Content<br> that Pays Dividends</h1>
+    <h1 class="hero__title">In search for simple <span class="hero__title--colorized">UI</span> solutions</h1>
     <div class="">
-      <div>
-        <div class="hero__name"><a href="/"></a></div>
-        <h1 class="hero__title"><span class=" ">code + visual design</span></h1>
-      </div>
+ 
       <!--
       <nav>
         <ul class="hero__navigation">
@@ -15,6 +12,6 @@
         </ul>
       </nav>
       -->
-    </div>
+
   </div>
 </header>
