--- a/themes/metrumy/assets/sass/_navigation-global.scss
+++ b/themes/metrumy/assets/sass/_navigation-global.scss
@@ -5,7 +5,7 @@ html {
 a {
   color: $text-color;
   text-decoration: underline;
-  text-decoration-color: $grey;
+  text-decoration-color: $blue;
   transition: 0.1s ease-in;
 
   &:active, &:hover {
