--- a/themes/metrumy/assets/sass/_hero.scss
+++ b/themes/metrumy/assets/sass/_hero.scss
@@ -50,7 +50,7 @@
 }
 
 .hero__title--colorized { // <span> element might be required
-  color: $red; 
+  color: $blue; 
   padding: 0.25em 0.25em 0.1em;
 }
 
