fix broken links, add/remove image assets

--- a/themes/metrumy/assets/sass/_hero.scss
+++ b/themes/metrumy/assets/sass/_hero.scss
@@ -1,5 +1,6 @@
 .hero {
   background-color: $sand-light;
+  background-image: url("./img/mountainnkd.jpg");
   color: $blue-dark;
   line-height: 1.2;
   padding: 4rem 0 4rem;
