simplify layout, remove 'hero'

--- a/themes/metrumy/assets/sass/_grid-global.scss
+++ b/themes/metrumy/assets/sass/_grid-global.scss
@@ -56,7 +56,7 @@
   .grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: start;
     align-content: baseline;
     @include columns;
   }
