--- a/themes/metrumy/assets/sass/_hero.scss
+++ b/themes/metrumy/assets/sass/_hero.scss
@@ -1,12 +1,10 @@
 .hero {
-  background-color: $sand-light;
-  background-image: url("./img/mountainnkd.jpg");
   color: $blue-dark;
   line-height: 1.2;
-  padding: 4rem 0 4rem;
-  margin: 0 auto;
-  text-align: center;
-  //max-width: 1200px;
+  padding: 0;
+  text-align: left;
+  @include wrapper-mid;
+  margin-bottom: 3rem;
 }
 
 .hero__container {
@@ -18,7 +16,6 @@
   grid-template-columns: 40% 55%;
   grid-column-gap: 5%;
   padding: 0;
-  
 }
 
 .hero__name {
@@ -44,9 +41,10 @@
 }
 
 .hero__title {
-  font-size: $l;
+  font-family: $monospace;
+  font-size: $m;
   font-weight: bold;
-  line-height: 1.2;
+  line-height: 1.1;
   padding: 0 1rem;
 }
 
