--- a/themes/metrumy/layouts/partials/blogFront.html
+++ b/themes/metrumy/layouts/partials/blogFront.html
@@ -49,21 +49,26 @@
             </h2>
             {{ if not .Params.subtitle }}       
                 {{ if .Params.video }}
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                        height="21" 
-                        width="21"
-                        viewBox="0 2 24 24">
-                        <path fill="none" d="M0 0h24v24H0V0z"/>
-                        <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" 
+                        width="20" height="20" viewBox="0 0 24 24"
+                        fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="icon--intext feather feather-film">
+                        <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
+                        <line x1="7" y1="2" x2="7" y2="22"></line>
+                        <line x1="17" y1="2" x2="17" y2="22"></line>
+                        <line x1="2" y1="12" x2="22" y2="12"></line>
+                        <line x1="2" y1="7" x2="7" y2="7"></line>
+                        <line x1="2" y1="17" x2="7" y2="17"></line>
+                        <line x1="17" y1="17" x2="22" y2="17"></line>
+                        <line x1="17" y1="7" x2="22" y2="7"></line>
                     </svg>
                 {{ end }}
                 {{ if "code" in .Params.categories }}
                     <svg xmlns="http://www.w3.org/2000/svg"
-                        height="21"
-                        width="21"
-                        viewBox="0 0 24 24">
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
-                        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+                        width="20" height="20" viewBox="0 0 24 24"
+                        fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        class="icon--intext feather feather-code">
+                        <polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline>
                     </svg>
                 {{ end }}
             {{ end }}
@@ -72,22 +77,27 @@
             {{ if .Params.subtitle }}
                 <h3 class="post-list--post-subtitle">
                     {{ if .Params.video }}
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                            height="21" 
-                            width="21"
-                            viewBox="0 2 24 24" >
-                            <path fill="none" d="M0 0h24v24H0V0z"/>
-                            <path d="M21 3H3c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h18c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 13H3V5h18v11z"/>
+                        <svg xmlns="http://www.w3.org/2000/svg" 
+                            width="18" height="18" viewBox="0 0 24 24"
+                            fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="icon--intext feather feather-film">
+                            <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
+                            <line x1="7" y1="2" x2="7" y2="22"></line>
+                            <line x1="17" y1="2" x2="17" y2="22"></line>
+                            <line x1="2" y1="12" x2="22" y2="12"></line>
+                            <line x1="2" y1="7" x2="7" y2="7"></line>
+                            <line x1="2" y1="17" x2="7" y2="17"></line>
+                            <line x1="17" y1="17" x2="22" y2="17"></line>
+                            <line x1="17" y1="7" x2="22" y2="7"></line>
                         </svg>
                     {{ end }}
                     {{ if in .Params.categories "code" }}
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                        height="21"
-                        width="21"
-                        viewBox="0 2 24 24">
-                        <path fill="none" d="M0 0h24v24H0V0z"/>
-                        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
-                    </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            width="18" height="18" viewBox="0 0 24 24"
+                            fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="icon--intex fteather feather-code">
+                            <polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline>
+                        </svg>
                     {{ end }}
                     {{ .Params.subtitle }}
                 </h3>
