--- a/themes/metrumy/assets/sass/_buttons.scss
+++ b/themes/metrumy/assets/sass/_buttons.scss
@@ -6,7 +6,7 @@ button,
   cursor: pointer;
   background-color: transparent;
   background: linear-gradient(transparent, #dedede);
-  border: solid $black;
+  border: solid $orange-deep;
   border-width: 1px 1px 2px;
   border-radius: 4px 4px 6px 4px;
   font-family: inherit;
