create 'scroll events' js module

--- a/themes/metrumy/layouts/partials/footerReact.html
+++ b/themes/metrumy/layouts/partials/footerReact.html
@@ -26,7 +26,7 @@
 
     <div class="footer--link-top">
         <a href="#top">
-            <button class="button--orange">
+            <button>
                 <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
                     <path fill="none" d="M0 0h24v24H0V0z" />
                     <path fill="#cc5500" d="M8 11h3v10h2V11h3l-4-4-4 4zM4 3v2h16V3H4z" />
