reconfigure templates and js, add react.js base

--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -3,4 +3,6 @@
 
 {{ partial "blogFront.html" . }}
 
-{{ partial "footer.html" . }}
+<div id="react-test"></div>
+
+{{ partial "footerReact.html" . }}
