--- a/themes/metrumy/layouts/partials/blogFront.html
+++ b/themes/metrumy/layouts/partials/blogFront.html
@@ -1,85 +1,19 @@
-
-<!--
-<section class="top-pics">
-
-    <div class="post-list--list-title">Featured:</div>
-
-    <div class="top-pics--grid">
-        {{ range (where .Data.Pages "Section" "blog") }}
-            {{ if .Params.topPick }}
-            <div class="post-list--post">
-
-                <div class="post-list--container">
-
-                    <h2 class="post-list--post-title--first">
-                        <a href="{{ .Permalink }}">
-                            {{ .Title }}
-                        </a>
-                    </h2>
-
-                    {{ if .Params.subtitle }}
-                        <h3 class="post-list--post-subtitle">
-                            {{ .Params.subtitle }}
-                        </h3>
-                    {{ end }}
-
-                </div>
-            </div>
-        
-            {{ end }}
-        {{ end }}
-    </div>
-
-</section>
--->
-
 <section class="post-list">
 
-    {{ range (where .Data.Pages "Section" "blog") }}
-
-    <div class="post-list--post">
-
-        <div class="post-list--container">
-
-
-            <h2 class="post-list--post-title">
-                <a href="{{ .Permalink }}">
-                    {{ .Title }}
-                </a>
-            </h2>
-            {{ if not .Params.subtitle }}       
-                {{ if .Params.video }}
-                    <svg xmlns="http://www.w3.org/2000/svg" 
-                        width="20" height="20" viewBox="0 0 24 24"
-                        fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="icon--intext feather feather-film">
-                        <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
-                        <line x1="7" y1="2" x2="7" y2="22"></line>
-                        <line x1="17" y1="2" x2="17" y2="22"></line>
-                        <line x1="2" y1="12" x2="22" y2="12"></line>
-                        <line x1="2" y1="7" x2="7" y2="7"></line>
-                        <line x1="2" y1="17" x2="7" y2="17"></line>
-                        <line x1="17" y1="17" x2="22" y2="17"></line>
-                        <line x1="17" y1="7" x2="22" y2="7"></line>
-                    </svg>
-                {{ end }}
-                {{ if "code" in .Params.categories }}
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                        width="20" height="20" viewBox="0 0 24 24"
-                        fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="icon--intext feather feather-code">
-                        <polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline>
-                    </svg>
-                {{ end }}
-            {{ end }}
-
-            
-            {{ if .Params.subtitle }}
-                <h3 class="post-list--post-subtitle">
+    {{ range where .Pages "Section" "blog" }}
+        {{ range .Pages }}
+        <div class="post-list--post">
+            <div class="post-list--container">
+                <h2 class="post-list--post-title">
+                    <a href="{{ .Permalink }}">
+                        {{ .Title }}
+                    </a>
+                </h2>
+                {{ if not .Params.subtitle }}
                     {{ if .Params.video }}
-                        <svg xmlns="http://www.w3.org/2000/svg" 
-                            width="18" height="18" viewBox="0 0 24 24"
-                            fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        <svg xmlns="http://www.w3.org/2000/svg"
+                            width="20" height="20" viewBox="0 0 24 24"
+                            fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                             class="icon--intext feather feather-film">
                             <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
                             <line x1="7" y1="2" x2="7" y2="22"></line>
@@ -93,18 +27,45 @@
                     {{ end }}
                     {{ if in .Params.categories "code" }}
                         <svg xmlns="http://www.w3.org/2000/svg"
-                            width="18" height="18" viewBox="0 0 24 24"
-                            fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                            class="icon--intex fteather feather-code">
+                            width="20" height="20" viewBox="0 0 24 24"
+                            fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="icon--intext feather feather-code">
                             <polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline>
                         </svg>
                     {{ end }}
-                    {{ .Params.subtitle }}
-                </h3>
-            {{ end }}
+                {{ end }}
 
+                {{ if .Params.subtitle }}
+                    <h3 class="post-list--post-subtitle">
+                        {{ if .Params.video }}
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                width="18" height="18" viewBox="0 0 24 24"
+                                fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon--intext feather feather-film">
+                                <rect x="2" y="2" width="20" height="20" rx="2.18" ry="2.18"></rect>
+                                <line x1="7" y1="2" x2="7" y2="22"></line>
+                                <line x1="17" y1="2" x2="17" y2="22"></line>
+                                <line x1="2" y1="12" x2="22" y2="12"></line>
+                                <line x1="2" y1="7" x2="7" y2="7"></line>
+                                <line x1="2" y1="17" x2="7" y2="17"></line>
+                                <line x1="17" y1="17" x2="22" y2="17"></line>
+                                <line x1="17" y1="7" x2="22" y2="7"></line>
+                            </svg>
+                        {{ end }}
+                        {{ if in .Params.categories "code" }}
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                width="18" height="18" viewBox="0 0 24 24"
+                                fill="none" stroke="#222" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                class="icon--intex fteather feather-code">
+                                <polyline points="16 18 22 12 16 6"></polyline><polyline points="8 6 2 12 8 18"></polyline>
+                            </svg>
+                        {{ end }}
+                        {{ .Params.subtitle }}
+                    </h3>
+                {{ end }}
+            </div>
         </div>
-    </div>
+        {{ end }}
     {{ end }}
 
 </section>
