setup js for two (base and app) source and output pairs

--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -3,6 +3,4 @@
 
 {{ partial "blogFront.html" . }}
 
-<div id="react-test"></div>
-
-{{ partial "footerReact.html" . }}
+{{ partial "footer.html" . }}
