--- a/themes/metrumy/layouts/partials/footerReact.html
+++ b/themes/metrumy/layouts/partials/footerReact.html
@@ -1,5 +1,4 @@
 <footer>
-
     <div>
         <ul class="list--contacts">
             <li>
@@ -27,7 +26,9 @@
     <div class="footer--link-top">
         <a href="#top">
             <button>
-                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24">
+                <svg xmlns="http://www.w3.org/2000/svg"
+                    width="28" height="28" viewBox="0 0 24 24"
+                >
                     <path fill="none" d="M0 0h24v24H0V0z" />
                     <path fill="#cc5500" d="M8 11h3v10h2V11h3l-4-4-4 4zM4 3v2h16V3H4z" />
                 </svg>
@@ -35,28 +36,24 @@
             </button>
         </a>
     </div>
-
-    <div id="jstest">
-        {{ "{{ message }}" }}
-    </div>
-
 </footer>
+</div><!-- end of id="allwrapper" -->
 
-</div>
+<!-- fundamental JS piece; should be on every page  -->
+{{ $baseJS := resources.Get "js/base.js" }}
+{{ $secureBaseJS := $baseJS | resources.Fingerprint }}
+{{ $baseJSMap:= resources.Get "js/base.js.map" }}
+<script src="{{ $secureBaseJS.Permalink }}"
+        data-srcmap="{{ $baseJSMap.Permalink}}">
+</script>
 
-<!-- Load React. -->
-<!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-<script
-    src="https://unpkg.com/react@17/umd/react.development.js"
-    crossorigin
-></script>
-<script
-    src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
-    crossorigin
-></script>
-{{ $js := resources.Get "js/main-bundle.js" }}
-{{ $secureJS := $js | resources.Fingerprint }}
-{{ $jsMap := resources.Get "js/main-bundle.js.map" }}
-<script src="{{ $secureJS.Permalink }}" data-srcmap="{{ $jsMap.Permalink}}"></script>
+<!-- Use ony when React required -->
+{{ $appJS := resources.Get "js/app.js" }}
+{{ $secureAppJS := $appJS | resources.Fingerprint }}
+{{ $appJSMap := resources.Get "js/app.js.map" }}
+<script src="{{ $secureAppJS.Permalink }}"
+        data-srcmap="{{ $appJSMap.Permalink}}">
+</script>
+
 </body>
 </html>
