--- a/themes/metrumy/layouts/_default/sandbox.html
+++ b/themes/metrumy/layouts/_default/sandbox.html
@@ -2,13 +2,11 @@
 
 {{ partial "logo.html" . }}
 
-
 <div class="article article--narrow">
     <h1 class="experiments--title">{{ .Title }}</h1>
 </div>
 
-
 <div id="react-root">
 </div>
 
-{{ partial "footer.html" . }}
+{{ partial "footerReact.html" . }}
